[gd_scene load_steps=7 format=3 uid="uid://cynekxynk6jro"]

[ext_resource type="Texture2D" uid="uid://dvq8cogv61wwb" path="res://icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://c0eib7q1axem7" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://hq38vitm5pgd" path="res://bullet.tscn" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://bg3heqwjv2ran" path="res://boom.tscn" id="3_hqtel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(100, 100)

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_onrkg")
scenebullet = ExtResource("2_i3pqv")
sceneboom = ExtResource("3_hqtel")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="IframeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3.57628e-06, -3.57628e-06)
shape = SubResource("RectangleShape2D_i3pqv")

[node name="DeathOffscreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-06, -4.76837e-06)
scale = Vector2(8, 8)

[connection signal="flickerframe" from="." to="." method="_on_flickerframe"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="IframeTimer" to="." method="_on_iframe_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_exited" from="DeathOffscreenNotifier" to="." method="_on_death_offscreen_notifier_screen_exited"]
